--- a/ESTEBAN_BORRO_T1_M1/Index.html
+++ b/ESTEBAN_BORRO_T1_M1/Index.html
@@ -3,14 +3,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mighty Ducks Hockey League</title>
+    <title>Home: Mighty Ducks Hockey League</title>
 </head>
 <body style="font-family: Comic Sans MS">
     
     <div style="display:flex">
-            <img src="./TP1/assets/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" style="height: 150; ">
-        <div style="margin-left: 70px; margin-top: 5px">
-            <h1>Mighty Ducks Hockey League</h1>
+            <img src="./assets/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" style="height: 150; ">
+        <div style="margin-left: 70px; margin-top: -25px">
+            <h1 style="font-size:50px">Mighty Ducks Hockey League</h1>
             <div style="display:flex">
                 <p>
                     <a href="./Index.html">Home</a>
@@ -24,7 +24,7 @@
     </div>
 <br>
     <div style="display:flex">
-            <img src="./TP1/assets/hockey_1.jpg" alt="imagen1" style="height: 70; margin-left:20px; margin-top:25px ">
+            <img src="./assets/hockey_1.jpg" alt="imagen1" style="height: 100; width: 115; margin-left:20px; margin-top:25px ">
         <div style="margin-left: 135px;">
             <h2>Upcoming Events</h2>
             <div>
