--- a/ESTEBAN_BORRO_T1_M1/Index.html
+++ b/ESTEBAN_BORRO_T1_M1/Index.html
@@ -7,27 +7,27 @@
 </head>
 <body style="font-family: Comic Sans MS">
     
-    <div style="display:flex">
+    <header style="display:flex">
             <img src="./assets/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" style="height: 150; ">
         <div style="margin-left: 70px; margin-top: -25px">
             <h1 style="font-size:50px">Mighty Ducks Hockey League</h1>
             <div style="display:flex">
-                <p>
+                <nav>
                     <a href="./Index.html">Home</a>
                     <h7>|</h7>
                     <a href="./About.html">About MDHL</a>
                     <h7>|</h7>
                     <a href="./Contact.html">Contact</a>
-                </p>
+                </nav>
             </div>
         </div>
-    </div>
+    </header>
 <br>
-    <div style="display:flex">
+    <main style="display:flex">
             <img src="./assets/hockey_1.jpg" alt="imagen1" style="height: 100; width: 115; margin-left:20px; margin-top:25px ">
-        <div style="margin-left: 135px;">
+        <section style="margin-left: 135px;">
             <h2>Upcoming Events</h2>
-            <div>
+            <details>
                 <dl>
                     <dt><b>August 4</b></dt>
                     <dd> MDSL Fundraiser</dd>
@@ -38,8 +38,8 @@
                     <dt><b>September 1</b></dt>
                     <dd>First Game of the Season (Check Game Schedule for details)</dd>
                 </dl>
-            </div>
-        </div>
-    </div>
+            </details>
+        </section>
+    </main>
 </body>
 </html>
