--- a/ESTEBAN_BORRO_T1_M1/Contact.html
+++ b/ESTEBAN_BORRO_T1_M1/Contact.html
@@ -5,26 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home: Mighty Ducks Hockey League</title>
 </head>
-<body style="font-family: Comic Sans MS">
-    
-    <div style="display:flex">
-            <img src="./assets/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" style="height: 150; ">
-        <div style="margin-left: 70px; margin-top: -25px">
-            <h1 style="font-size:50px">Mighty Ducks Hockey League</h1>
-            <div style="display:flex">
-                <p>
-                    <a href="./Index.html">Home</a>
-                    <h7>|</h7>
-                    <a href="./About.html">About MDHL</a>
-                    <h7>|</h7>
-                    <a href="./Contact.html">Contact</a>
-                </p>
+    <body style="font-family: Comic Sans MS">
+        
+        <header style="display:flex">
+                <img src="./assets/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" style="height: 150; ">
+            <div style="margin-left: 70px; margin-top: -25px">
+                <h1 style="font-size:50px">Mighty Ducks Hockey League</h1>
+                <div style="display:flex">
+                    <nav>
+                        <a href="./Index.html">Home</a>
+                        <h7>|</h7>
+                        <a href="./About.html">About MDHL</a>
+                        <h7>|</h7>
+                        <a href="./Contact.html">Contact</a>
+                    </nav>
+                </div>
             </div>
-        </div>
-    </div>
-<br>
-    <div style="display:flex">
-            <img src="./assets/hockey_3.jpg" alt="two hockey players practicing" style="height: 100;width: 115; margin-left:20px; margin-top:25px ">
-        <div style="margin-left: 100px;">
-            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a><p>
-            <p>We reply to yout email as soon as we can.<p>
+        </header>
+    <br>
+        <main style="display:flex">
+                <img src="./assets/hockey_3.jpg" alt="two hockey players practicing" style="height: 100;width: 115; margin-left:20px; margin-top:25px ">
+            <div style="margin-left: 100px;">
+                <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a><p>
+                <p>We reply to yout email as soon as we can.<p>
+            </div>
+        </main>
+    </body>
+</html>
