about: semantics fixed

--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,37 +9,29 @@
 <body style="font-family: Comic Sans MS">
     
     <header style="display:flex">
-            <img src="./assets/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" style="height: 150; ">
-        <div style="margin-left: 70px; margin-top: -25px">
-            <h1 style="font-size:50px">Mighty Ducks Hockey League</h1>
-            <div style="display:flex">
+            <img src="./assets/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" style="height: 150px; ">      
+            <div style="margin-left: 70px; margin-top: -25px; display:inline">
+                <h1 style="font-size:50px">Mighty Ducks Hockey League</h1>          
                 <nav>
-                    <a href="./Index.html">Home</a>
-                    <h7>|</h7>
-                    <a href="./About.html">About MDHL</a>
-                    <h7>|</h7>
-                    <a href="./Contact.html">Contact</a>
+                    <a href="./index.html">Home |</a>
+                    <a href="./about.html">About MDHL |</a>
+                    <a href="./contact.html">Contact</a>
                 </nav>
             </div>
-        </div>
     </header>
 <br>
     <main style="display:flex">
-            <img src="./assets/hockey_1.jpg" alt="imagen1" style="height: 100; width: 115; margin-left:20px; margin-top:25px ">
+            <img src="./assets/hockey_1.jpg" alt="imagen1" style="height: 100px; width: 115px; margin-left:20px; margin-top:25px ">
         <section style="margin-left: 135px;">
             <h2>Upcoming Events</h2>
-            <details>
                 <dl>
                     <dt><b>August 4</b></dt>
                     <dd> MDSL Fundraiser</dd>
-                    <br>
                     <dt><b>August 16</b></dt>
                     <dd>Season Kick-off: Meet the Teams</dd>
-                    <br>
                     <dt><b>September 1</b></dt>
                     <dd>First Game of the Season (Check Game Schedule for details)</dd>
                 </dl>
-            </details>
         </section>
     </main>
 </body>
