--- a/Contact.html
+++ b/Contact.html
@@ -1,34 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home: Mighty Ducks Hockey League</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Home: Mighty Ducks Hockey League</title>
+    </head>
     <body style="font-family: Comic Sans MS">
-        
         <header style="display:flex">
-                <img src="./assets/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" style="height: 150; ">
-            <div style="margin-left: 70px; margin-top: -25px">
-                <h1 style="font-size:50px">Mighty Ducks Hockey League</h1>
-                <div style="display:flex">
+                <img src="./assets/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" style="height: 150px; ">      
+                <div style="margin-left: 70px; margin-top: -25px; display:inline">
+                    <h1 style="font-size:50px">Mighty Ducks Hockey League</h1>          
                     <nav>
-                        <a href="./Index.html">Home</a>
-                        <h7>|</h7>
-                        <a href="./About.html">About MDHL</a>
-                        <h7>|</h7>
-                        <a href="./Contact.html">Contact</a>
+                        <a href="./index.html">Home |</a>
+                        <a href="./about.html">About MDHL |</a>
+                        <a href="./contact.html">Contact</a>
                     </nav>
                 </div>
-            </div>
         </header>
     <br>
         <main style="display:flex">
-                <img src="./assets/hockey_3.jpg" alt="two hockey players practicing" style="height: 100;width: 115; margin-left:20px; margin-top:25px ">
+            <img src="./assets/hockey_3.jpg" alt="two hockey players practicing" style="height: 100px;width: 115px; margin-left:20px; margin-top:25px ">
             <div style="margin-left: 100px;">
                 <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a><p>
-                <p>We reply to yout email as soon as we can.<p>
+                <p>We reply to yout email as soon as we can.</p>
             </div>
         </main>
     </body>
