--- a/Index.html
+++ b/Index.html
@@ -4,27 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style1.css">
+    <!-- <link rel="stylesheet" href="style2.css"> -->
+    <!-- <link rel="stylesheet" href="style3.css"> -->
     <title>Home: Mighty Ducks Hockey League</title>
 </head>
-<body style="font-family: Comic Sans MS">
+<body>
     
-    <header style="display:flex">
-            <img src="./assets/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" style="height: 150px; ">      
-            <div style="margin-left: 70px; margin-top: -25px; display:inline">
-                <h1 style="font-size:50px">Mighty Ducks Hockey League</h1>          
-                <nav>
-                    <a href="./index.html">Home |</a>
-                    <a href="./about.html">About MDHL |</a>
+    <header>
+            <div id="headerDiv">
+                <img src="./assets/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" id="logo1">
+                <img src="./assets/design1_image1.jpg" alt="two players facing eachother" id="image1">
+                <h1 id="h1Title">Mighty Ducks Hockey League</h1>          
+                <nav id="navbar">
+                    <a href="./index.html">Home</a>
+                    <a href="./about.html">About MDHL</a>
                     <a href="./contact.html">Contact</a>
                 </nav>
             </div>
     </header>
 <br>
-    <main style="display:flex">
-            <img src="./assets/hockey_1.jpg" alt="imagen1" style="height: 100px; width: 115px; margin-left:20px; margin-top:25px ">
-        <section style="margin-left: 135px;">
-            <h2>Upcoming Events</h2>
-                <dl>
+    <main>
+            <img src="./assets/hockey_1.jpg" alt="imagen1" id="imgHockey_1">
+        <section id="sectionIndex">
+            <h2 id="upcomingTitle">Upcoming Events</h2>
+                <dl id="eventList">
                     <dt><b>August 4</b></dt>
                     <dd> MDSL Fundraiser</dd>
                     <dt><b>August 16</b></dt>
