--- a/Index.html
+++ b/Index.html
@@ -20,8 +20,7 @@
                         <a href="./contact.html">Contact</a>
                     </nav>
         </header>
-        <main class="mainIndex">
-                <img src="./assets/hockey_1.jpg" alt="imagen1" class="imgHockey_1">
+        <main>
             <section>
                 <h2 class="upcomingTitle">Upcoming Events</h2>
                     <dl class="eventList">
