--- a/About.html
+++ b/About.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home: Mighty Ducks Hockey League</title>
-</head>
-<body style="font-family: Comic Sans MS">
-    <header style="display:flex">
-            <img src="./assets/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" style="height: 150px; ">      
-            <div style="margin-left: 70px; margin-top: -25px; display:inline">
-                <h1 style="font-size:50px">Mighty Ducks Hockey League</h1>          
-                <nav>
-                    <a href="./index.html">Home |</a>
-                    <a href="./about.html">About MDHL |</a>
-                    <a href="./contact.html">Contact</a>
-                </nav>
-            </div>
-    </header>
-    <main style="display:flex">
-        <img src="./assets/hockey_2.jpg" alt="hockey player moving disk" style="height: 100px; width: 115px; margin-left:20px; margin-top:25px ">
-        <dl style="margin-left: 100px; margin-right: 230px; text-align:left">
-            <dt ><strong>Mision</strong></dt>
-            <dd style="margin-left:15px; text-indent:15px">To support young athletes living Chicago's northside neighborhood, who have an interest in learning and playing soccer, with opportunities to learn and practice skills related to the game of hockey, specifically those skills around team cooperation and good sportsmanship</dd>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <!-- <link rel="stylesheet" href="style2.css"> -->
+        <!-- <link rel="stylesheet" href="style3.css"> -->
+        <title>MDHL: About </title>
+    </head>
+    <body>
+        <header>
+                    <img src="./assets/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" class="logo1">
+                    <img src="./assets/design1_image1.jpg" alt="two players facing eachother" class="image1">
+                    <h1 class="h1Title">Mighty Ducks Hockey League</h1>          
+                    <nav class="navbar">
+                        <a href="./index.html">Home</a>
+                        <a href="./about.html">About MDHL</a>
+                        <a href="./contact.html">Contact</a>
+                    </nav>
+        </header>
+        <main style="display:flex">
+            <section>
+                <h2>About MDHL</h2>
+                <dl class="aboutContent">
+                    <dt>Mision</dt>
+                    <dd>To support young athletes living Chicago's northside neighborhood, who have an interest in learning and playing soccer, with opportunities to learn and practice skills related to the game of hockey, specifically those skills around team cooperation and good sportsmanship</dd>
 
-            <dt style="margin-top:20px"><strong>Vision</strong></dt>
-            <dd style="margin-left:15px ; text-indent:15px">  The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes through the building of character, self-discipline, and leadership</dd>
+                    <dt>Vision</dt>
+                    <dd>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes through the building of character, self-discipline, and leadership</dd>
 
-            <dt style="margin-top:20px"><strong>General Information</strong></dt>
-            <dd style="margin-left:15px ; text-indent:15px">  The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of parents and previous league members</dd>
-        </dl>
-    </main>
+                    <dt>General Information</dt>
+                    <dd>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of parents and previous league members</dd>
+                </dl>
+            </section>
+        </main>
     </body>
 </html>
