--- a/About.html
+++ b/About.html
@@ -20,7 +20,7 @@
                         <a href="./contact.html">Contact</a>
                     </nav>
         </header>
-        <main style="display:flex">
+        <main>
             <section>
                 <h2>About MDHL</h2>
                 <dl class="aboutContent">
