--- a/Contact.html
+++ b/Contact.html
@@ -4,27 +4,30 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home: Mighty Ducks Hockey League</title>
+        <link rel="stylesheet" href="style.css">
+        <!-- <link rel="stylesheet" href="style2.css"> -->
+        <!-- <link rel="stylesheet" href="style3.css"> -->
+        <title>MDHL: Contact </title>
     </head>
-    <body style="font-family: Comic Sans MS">
-        <header style="display:flex">
-                <img src="./assets/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" style="height: 150px; ">      
-                <div style="margin-left: 70px; margin-top: -25px; display:inline">
-                    <h1 style="font-size:50px">Mighty Ducks Hockey League</h1>          
-                    <nav>
-                        <a href="./index.html">Home |</a>
-                        <a href="./about.html">About MDHL |</a>
+    <body>
+        <header>
+                    <img src="./assets/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" class="logo1">
+                    <img src="./assets/design1_image1.jpg" alt="two players facing eachother" class="image1">
+                    <h1 class="h1Title">Mighty Ducks Hockey League</h1>          
+                    <nav class="navbar">
+                        <a href="./index.html">Home</a>
+                        <a href="./about.html">About MDHL</a>
                         <a href="./contact.html">Contact</a>
                     </nav>
-                </div>
         </header>
-    <br>
-        <main style="display:flex">
-            <img src="./assets/hockey_3.jpg" alt="two hockey players practicing" style="height: 100px;width: 115px; margin-left:20px; margin-top:25px ">
-            <div style="margin-left: 100px;">
-                <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a><p>
-                <p>We reply to yout email as soon as we can.</p>
-            </div>
+        <main>
+            <section>
+                <h2>Contact</h2>
+                <div class="contactSection">
+                    <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a><p>
+                    <p>We reply to yout email as soon as we can.</p>
+                </div>
+            </section>
         </main>
     </body>
 </html>
