--- a/Index.html
+++ b/Index.html
@@ -18,6 +18,8 @@
                         <a href="./index.html">Home</a>
                         <a href="./about.html">About MDHL</a>
                         <a href="./contact.html">Contact</a>
+                        <a href="./game_info.html">Game Info</a>
+                        <a href="./rules.html">Rules</a>
                     </nav>
         </header>
         <main>
