--- a/game_info.html
+++ b/game_info.html
@@ -15,11 +15,11 @@
                     <img src="./assets/design1_image1.jpg" alt="two players facing eachother" class="image1">
                     <h1 class="h1Title">Mighty Ducks Hockey League</h1>          
                     <nav class="navbar">
-                        <a href="./index.html">Home</a>
-                        <a href="./about.html">About MDHL</a>
-                        <a href="./contact.html">Contact</a>
-                        <a href="./game_info.html">Game Info</a>
-                        <a href="./rules.html">Rules</a>
+                        <a href="./index.html"><button class="button">Home</button></a>
+                        <a href="./about.html"><button class="button">About MDHL</button></a>
+                        <a href="./contact.html"><button class="button">Contact</button></a>
+                        <a href="./game_info.html"><button class="button">Game Info</button></a>
+                        <a href="./rules.html"><button class="button">Rules</button></a>
                     </nav>
         </header>
         <main>
