--- a/About.html
+++ b/About.html
@@ -35,6 +35,13 @@
                     <dt>General Information</dt>
                     <dd>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of parents and previous league members</dd>
                 </dl>
+                <div class="imgDiv">
+                    <img src="./assets/design1_image1.jpg" alt="two players and arbiter">
+                    <img src="./assets/design1_image2.jpg" alt="player sliding and goalkeeper">
+                    <img src="./assets/hockey_1.jpg" alt="player celebrating">
+                    <img src="./assets/hockey_2.jpg" alt="player moving disk">
+                    <img src="./assets/hockey_3.jpg" alt="two players advancing">
+                </div>
             </section>
         </main>
     </body>
