added assets folder

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <header>
         <nav class="navContainer">
-            <col-12 class="navLinksContainerColumn">
-                <a class="anchorLogoContainer"></a>    
+            <col-12 class="navLinksContainerColumn">  
+                <a href="" class="anchorLogoContainer">asdasd</a>
+                <a href="" class="spacer"></a>
                 <a href="./index.html" class="anchorHome" class="navLink">HOME</a>
                 <a href="./eventsUpcoming.html" class="anchorUpcomingEvents" class="navLink">UPCOMING EVENTS</a>
                 <a href="./eventsPast.html" class="anchorPastEvents" class="navLink">PAST EVENTS</a>
                 <a href="./contact.html" class="anchorContact" class="navLink">CONTACT</a>
                 <a href="./stats.html" class="anchorStats" class="navLink">STATS</a>
-                
             </col-12>
             <col-12 class="navCarrouselContainerColumn">
                 <div class="navDivCarrousel"></div>
