added footer for all pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <link rel="shortcut icon" href="./assets/image/favicon.png" type=image/x-icon>
     <title>AE:CONTACT</title>
 </head>
@@ -14,7 +14,7 @@
         <nav class="navContainer">
             <!-- navbar: logo and links -->
             <col-12 class="navLinksContainerColumn">  
-                <a href="./index.html" class="anchorLogoContainer"><img src="./assets/image/Logo Amazing Events.png" alt="logo amazing events" class="logoNavbar"></a>
+                <a href="./index.html" class="anchorLogoContainer"><img src="/assets/image/Logo Amazing Events.png" alt="logo amazing events" class="logoNavbar"></a>
                 <a href="" class="spacer"></a>
                 <a href="./index.html" class="anchorHome; navLink" >HOME</a>
                 <a href="./eventsUpcoming.html" class="anchorUpcomingEvents; navLink" >UPCOMING EVENTS</a>
@@ -26,14 +26,26 @@
             <!-- navbar: titles and controls -->
             <col-12 class="navTitlesAndControlsContainerColumn">
                 <div class="navDivBarbutton">
-                    <a href="./eventsPast.html"><img src="./assets/image/buttons/buttonLeft.png" alt="button left" class="navButton"></a>
+                    <a href="./eventsPast.html"><img src="/assets/image/buttons/buttonLeft.png" alt="button left" class="navButton"></a>
                 </div>
                 <div><h1>CONTACT</h1></div>
                 <div class="navDivBarbutton">
-                    <a href="./stats.html"><img src="./assets/image/buttons/buttonRight.png" alt="button right" class="navButton"></a>
+                    <a href="./stats.html"><img src="/assets/image/buttons/buttonRight.png" alt="button right" class="navButton"></a>
                 </div>
             </col-12>
         </nav>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>   
+        <div class="socialLinks">
+            <a href="" class="footerLogo"><img src="/assets/image/logos/logoIG.png" alt="logo instagram" class="footerLogo"></a>
+            <a href="" class="footerLogo"><img src="/assets/image/logos/logoFACEBOOK.png" alt="logo facebook" class="footerLogo"></a>
+            <a href="" class="footerLogo"><img src="/assets/image/logos/logoWAP.png" alt="logo whatsapp" class="footerLogo"></a>
+        </div>
+        <div>
+        <a href="" class="spacer"></a>
+        </div>
+        <div class="cohortName">
+            <h2>MH.TN06</h2>
+        </div>
+</footer>
