tables not working

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/style.css">
-    <link rel="shortcut icon" href="./assets/image/favicon.png" type=image/x-icon>
+    <link rel="shortcut icon" href="/assets/image/favicon.png" type=image/x-icon>
     <title>AE:CONTACT</title>
 </head>
 <body>
@@ -35,7 +35,24 @@
             </col-12>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section class="sectionContactForm">
+            <form action="" method="" class="contactForm">
+                <legend>Name:</legend>
+                <label for="name"></label>
+                <input type="text" name="name" id="name">
+                <legend>Email:</legend>
+                <label for="mail"></label>
+                <input type="text" name="mail" id="mail">
+                <legend>Message:</legend>
+                <label for="message"></label>
+                <input type="text" name="message" id="messsage" class="messageBox">
+                <input type="submit" value="submit" class="formSubmit">
+
+            </form>
+        </section>
+
+    </main>
     <footer>   
         <div class="socialLinks">
             <a href="" class="footerLogo"><img src="/assets/image/logos/logoIG.png" alt="logo instagram" class="footerLogo"></a>
