--- a/pages/index.html
+++ b/pages/index.html
@@ -35,20 +35,86 @@
             </col-12>
         </nav>
     </header>
-    <main></main>
-        <footer>   
-                <div class="socialLinks">
-                    <a href="" class="footerLogo"><img src="/assets/image/logos/logoIG.png" alt="logo instagram" class="footerLogo"></a>
-                    <a href="" class="footerLogo"><img src="/assets/image/logos/logoFACEBOOK.png" alt="logo facebook" class="footerLogo"></a>
-                    <a href="" class="footerLogo"><img src="/assets/image/logos/logoWAP.png" alt="logo whatsapp" class="footerLogo"></a>
+    <main>
+        <section class="formFilter">           
+            <div>
+                <form action="" method="" class="formFilterContent">
+                    <input type="checkbox" id="category" name="category" value="category1">
+                    <label for="category">Category</label><br>
+                    <input type="checkbox" id="category" name="category" value="category1">
+                    <label for="category">Category</label><br>
+                    <input type="checkbox" id="category" name="category" value="category1">
+                    <label for="category">Category</label><br>
+                    <input type="checkbox" id="category" name="category" value="category1">
+                    <label for="category">Category</label><br>
+                    <input type="checkbox" id="category" name="category" value="category1">
+                    <label for="category">Category</label><br>
+            </div>
+            <div class="formSpacer">
+                <a href="" class="formSpacer"></a>
+            </div>
+            <div  class="searchBox">
+                <label for="searchBox"></label>
+                <input type="text" name="searchBox" id="searchBox" placeholder="search" class="searchBox">
+            </div>
+
+            </form>
+        </section>
+        <section class="cardsRow">
+            <div class="card">
+                <img src="/assets/image/Cinema.jpg" alt="cinema">
+                <h1>Titulo</h1>
+                <h4>Descripcion</h4>
+                <div class="cardPrize">
+                    <div><h6>prize: 0000</h6></div>
+                    <div><button class="addToCart">add to cart</button></div>
                 </div>
-                <div>
-                <a href="" class="spacer"></a>
+            </div>
+            <div class="card">
+                <img src="/assets/image/Cinema.jpg" alt="cinema">
+                <h1>Titulo</h1>
+                <h4>Descripcion</h4>
+                <div class="cardPrize">
+                    <div><h6>prize: 0000</h6></div>
+                    <div><button class="addToCart">add to cart</button></div>
                 </div>
-                <div class="cohortName">
-                    <h2>MH.TN06</h2>
+            </div>
+            <div class="card">
+                <img src="/assets/image/Cinema.jpg" alt="cinema">
+                <h1>Titulo</h1>
+                <h4>Descripcion</h4>
+                <div class="cardPrize">
+                    <div><h6>prize: 0000</h6></div>
+                    <div><button class="addToCart">add to cart</button></div>
                 </div>
-        </footer>
+            </div>
+            <div class="card">
+                <img src="/assets/image/Cinema.jpg" alt="cinema">
+                <h1>Titulo</h1>
+                <h4>Descripcion</h4>
+                <div class="cardPrize">
+                    <div><h6>prize: 0000</h6></div>
+                    <div><button class="addToCart">add to cart</button></div>
+                </div>
+            </div>
+        </section>
+
+
+
+    </main>
+    <footer>   
+            <div class="socialLinks">
+                <a href="" class="footerLogo"><img src="/assets/image/logos/logoIG.png" alt="logo instagram" class="footerLogo"></a>
+                <a href="" class="footerLogo"><img src="/assets/image/logos/logoFACEBOOK.png" alt="logo facebook" class="footerLogo"></a>
+                <a href="" class="footerLogo"><img src="/assets/image/logos/logoWAP.png" alt="logo whatsapp" class="footerLogo"></a>
+            </div>
+            <div>
+            <a href="" class="spacer"></a>
+            </div>
+            <div class="cohortName">
+                <h2>MH.TN06</h2>
+            </div>
+    </footer>
 
 
 
