--- a/pages/eventsPast.html
+++ b/pages/eventsPast.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/style.css">
-    <link rel="shortcut icon" href="./assets/image/favicon.png" type=image/x-icon>
+    <link rel="shortcut icon" href="/assets/image/favicon.png" type=image/x-icon>
     <title>AE:PAST EVENTS</title>
 </head>
 <body>
@@ -35,7 +35,73 @@
             </col-12>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section class="formFilter">           
+            <div>
+                <form action="" method="" class="formFilterContent">
+                    <input type="checkbox" id="category" name="category" value="category1">
+                    <label for="category">Category</label><br>
+                    <input type="checkbox" id="category" name="category" value="category1">
+                    <label for="category">Category</label><br>
+                    <input type="checkbox" id="category" name="category" value="category1">
+                    <label for="category">Category</label><br>
+                    <input type="checkbox" id="category" name="category" value="category1">
+                    <label for="category">Category</label><br>
+                    <input type="checkbox" id="category" name="category" value="category1">
+                    <label for="category">Category</label><br>
+            </div>
+            <div class="formSpacer">
+                <a href="" class="formSpacer"></a>
+            </div>
+            <div  class="searchBox">
+                <label for="searchBox"></label>
+                <input type="text" name="searchBox" id="searchBox" placeholder="search" class="searchBox">
+            </div>
+
+            </form>
+        </section>
+        <section class="cardsRow">
+            <div class="card">
+                <img src="/assets/image/Cinema.jpg" alt="cinema">
+                <h1>Titulo</h1>
+                <h4>Descripcion</h4>
+                <div class="cardPrize">
+                    <div><h6>prize: 0000</h6></div>
+                    <div><button class="addToCart">add to cart</button></div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="/assets/image/Cinema.jpg" alt="cinema">
+                <h1>Titulo</h1>
+                <h4>Descripcion</h4>
+                <div class="cardPrize">
+                    <div><h6>prize: 0000</h6></div>
+                    <div><button class="addToCart">add to cart</button></div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="/assets/image/Cinema.jpg" alt="cinema">
+                <h1>Titulo</h1>
+                <h4>Descripcion</h4>
+                <div class="cardPrize">
+                    <div><h6>prize: 0000</h6></div>
+                    <div><button class="addToCart">add to cart</button></div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="/assets/image/Cinema.jpg" alt="cinema">
+                <h1>Titulo</h1>
+                <h4>Descripcion</h4>
+                <div class="cardPrize">
+                    <div><h6>prize: 0000</h6></div>
+                    <div><button class="addToCart">add to cart</button></div>
+                </div>
+            </div>
+        </section>
+
+
+
+    </main>
     <footer>   
         <div class="socialLinks">
             <a href="" class="footerLogo"><img src="/assets/image/logos/logoIG.png" alt="logo instagram" class="footerLogo"></a>
