--- a/pages/stats.html
+++ b/pages/stats.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/style.css">
-    <link rel="shortcut icon" href="./assets/image/favicon.png" type=image/x-icon>
+    <link rel="shortcut icon" href="/assets/image/favicon.png" type=image/x-icon>
     <title>AE:STATS</title>
 </head>
 <body>
@@ -35,7 +35,26 @@
             </col-12>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section class="statTable">
+            <table class="statTable">
+                <caption>Stats</caption>
+                    <tr>
+                        <th>precio</th>
+                        <th>cantidad</th>
+                        <th>total</th>
+                    </tr>
+                    <tr>
+                        <td>100</td>
+                        <td>100</td>
+                        <td>100</td>
+                        <td>100</td>
+                    </tr>
+
+
+            </table>
+        </section>
+    </main>
     <footer>   
         <div class="socialLinks">
             <a href="" class="footerLogo"><img src="/assets/image/logos/logoIG.png" alt="logo instagram" class="footerLogo"></a>
