--- a/pages/stats.html
+++ b/pages/stats.html
@@ -37,21 +37,67 @@
     </header>
     <main>
         <section class="statTable">
-            <table class="statTable">
-                <caption>Stats</caption>
+            <table>
                     <tr>
-                        <th>precio</th>
-                        <th>cantidad</th>
-                        <th>total</th>
+                        <th>Name</th>
+                        <th>Date</th>
+                        <th>Description</th>
+                        <th>Category</th>
+                        <th>Place</th>
+                        <th>Capacity</th>
+                        <th>Assistance or Estimate</th>
+                        <th>Price</th>
                     </tr>
                     <tr>
-                        <td>100</td>
-                        <td>100</td>
-                        <td>100</td>
-                        <td>100</td>
+                        <td>insert name</td>
+                        <td>insert date</td>
+                        <td>insert description</td>
+                        <td>insert category</td>
+                        <td>insert place</td>
+                        <td>insert capacity</td>
+                        <td>insert assistance</td>
+                        <td>insert place</td>
                     </tr>
-
-
+                    <tr>
+                        <td>insert name</td>
+                        <td>insert date</td>
+                        <td>insert description</td>
+                        <td>insert category</td>
+                        <td>insert place</td>
+                        <td>insert capacity</td>
+                        <td>insert assistance</td>
+                        <td>insert place</td>
+                    </tr>
+                    <tr>
+                        <td>insert name</td>
+                        <td>insert date</td>
+                        <td>insert description</td>
+                        <td>insert category</td>
+                        <td>insert place</td>
+                        <td>insert capacity</td>
+                        <td>insert assistance</td>
+                        <td>insert place</td>
+                    </tr>
+                    <tr>
+                        <td>insert name</td>
+                        <td>insert date</td>
+                        <td>insert description</td>
+                        <td>insert category</td>
+                        <td>insert place</td>
+                        <td>insert capacity</td>
+                        <td>insert assistance</td>
+                        <td>insert place</td>
+                    </tr>
+                    <tr>
+                        <td>insert name</td>
+                        <td>insert date</td>
+                        <td>insert description</td>
+                        <td>insert category</td>
+                        <td>insert place</td>
+                        <td>insert capacity</td>
+                        <td>insert assistance</td>
+                        <td>insert place</td>
+                    </tr>
             </table>
         </section>
     </main>
