--- a/pages/eventsUpcoming.html
+++ b/pages/eventsUpcoming.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/assets/image/Cinema.jpg" alt="cinema">
+                <img src="/assets/image/Costume_Party.jpg" alt="cinema">
                 <h1>Titulo</h1>
                 <h4>Descripcion</h4>
                 <div class="cardPrize">
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/assets/image/Cinema.jpg" alt="cinema">
+                <img src="/assets/image/Food_Fair.jpg" alt="cinema">
                 <h1>Titulo</h1>
                 <h4>Descripcion</h4>
                 <div class="cardPrize">
@@ -89,7 +89,25 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/assets/image/Cinema.jpg" alt="cinema">
+                <img src="/assets/image/Marathon.jpg" alt="cinema">
+                <h1>Titulo</h1>
+                <h4>Descripcion</h4>
+                <div class="cardPrize">
+                    <div><h6>prize: 0000</h6></div>
+                    <div><button class="addToCart">add to cart</button></div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="/assets/image/Museum_Tour.jpg" alt="cinema">
+                <h1>Titulo</h1>
+                <h4>Descripcion</h4>
+                <div class="cardPrize">
+                    <div><h6>prize: 0000</h6></div>
+                    <div><button class="addToCart">add to cart</button></div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="/assets/image/Music_Concert.jpg" alt="cinema">
                 <h1>Titulo</h1>
                 <h4>Descripcion</h4>
                 <div class="cardPrize">
