fixed footer and img size

--- a/pages/stats.html
+++ b/pages/stats.html
@@ -16,21 +16,21 @@
             <col-12 class="navLinksContainerColumn">  
                 <a href="./index.html" class="anchorLogoContainer"><img src="/assets/image/Logo Amazing Events.png" alt="logo amazing events" class="logoNavbar"></a>
                 <a href="" class="spacer"></a>
-                <a href="./index.html" class="anchorHome; navLink" >HOME</a>
-                <a href="./eventsUpcoming.html" class="anchorUpcomingEvents; navLink" >UPCOMING EVENTS</a>
-                <a href="./eventsPast.html" class="anchorPastEvents; navLink" >PAST EVENTS</a>
-                <a href="./contact.html" class="anchorContact; navLink" >CONTACT</a>
-                <a href="./stats.html" class="anchorStats; navLink" >STATS</a>
+                <a href="/index.html" class="anchorHome; navLink" >HOME</a>
+                <a href="/pages/eventsUpcoming.html" class="anchorUpcomingEvents; navLink" >UPCOMING EVENTS</a>
+                <a href="/pages/eventsPast.html" class="anchorPastEvents; navLink" >PAST EVENTS</a>
+                <a href="/pages/contact.html" class="anchorContact; navLink" >CONTACT</a>
+                <a href="/pages/stats.html" class="anchorStats; navLink" >STATS</a>
             </col-12>
 
             <!-- navbar: titles and controls -->
             <col-12 class="navTitlesAndControlsContainerColumn">
                 <div class="navDivBarbutton">
-                    <a href="./contact.html"><img src="/assets/image/buttons/buttonLeft.png" alt="button left" class="navButton"></a>
+                    <a href="/pages/contact.html"><img src="/assets/image/buttons/buttonLeft.png" alt="button left" class="navButton"></a>
                 </div>
                 <div><h1>STATS</h1></div>
                 <div class="navDivBarbutton">
-                    <a href="./index.html"><img src="/assets/image/buttons/buttonRight.png" alt="button right" class="navButton"></a>
+                    <a href="/index.html"><img src="/assets/image/buttons/buttonRight.png" alt="button right" class="navButton"></a>
                 </div>
             </col-12>
         </nav>
