--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
             <col-12 class="navLinksContainerColumn">  
                 <a href="./index.html" class="anchorLogoContainer"><img src="/assets/image/Logo Amazing Events.png" alt="logo amazing events" class="logoNavbar"></a>
                 <a href="" class="spacer"></a>
-                <a href="./index.html" class="anchorHome; navLink" >HOME</a>
-                <a href="./eventsUpcoming.html" class="anchorUpcomingEvents; navLink" >UPCOMING EVENTS</a>
-                <a href="./eventsPast.html" class="anchorPastEvents; navLink" >PAST EVENTS</a>
-                <a href="./contact.html" class="anchorContact; navLink" >CONTACT</a>
-                <a href="./stats.html" class="anchorStats; navLink" >STATS</a>
+                <a href="/index.html" class="anchorHome; navLink" >HOME</a>
+                <a href="/pages/eventsUpcoming.html" class="anchorUpcomingEvents; navLink" >UPCOMING EVENTS</a>
+                <a href="/pages/eventsPast.html" class="anchorPastEvents; navLink" >PAST EVENTS</a>
+                <a href="/pages/contact.html" class="anchorContact; navLink" >CONTACT</a>
+                <a href="/pages/stats.html" class="anchorStats; navLink" >STATS</a>
             </col-12>
 
             <!-- navbar: titles and controls -->
             <col-12 class="navTitlesAndControlsContainerColumn">
                 <div class="navDivBarbutton">
-                    <a href="./stats.html"><img src="/assets/image/buttons/buttonLeft.png" alt="button left" class="navButton"></a>
+                    <a href="/pages/stats.html"><img src="/assets/image/buttons/buttonLeft.png" alt="button left" class="navButton"></a>
                 </div>
                 <div><h1>HOME</h1></div>
                 <div class="navDivBarbutton">
-                    <a href="./eventsUpcoming.html"><img src="/assets/image/buttons/buttonRight.png" alt="button right" class="navButton"></a>
+                    <a href="/pages/eventsUpcoming.html"><img src="/assets/image/buttons/buttonRight.png" alt="button right" class="navButton"></a>
                 </div>
             </col-12>
         </nav>
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/assets/image/Costume_Party.jpg" alt="cinema">
+                <img src="/assets/image/Costume_Party.jpg" alt="costume party">
                 <h1>Titulo</h1>
                 <h4>Descripcion</h4>
                 <div class="cardPrize">
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/assets/image/Food_Fair.jpg" alt="cinema">
+                <img src="/assets/image/Food_Fair.jpg" alt="food fair">
                 <h1>Titulo</h1>
                 <h4>Descripcion</h4>
                 <div class="cardPrize">
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/assets/image/Marathon.jpg" alt="cinema">
+                <img src="/assets/image/Marathon.jpg" alt="marathon">
                 <h1>Titulo</h1>
                 <h4>Descripcion</h4>
                 <div class="cardPrize">
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/assets/image/Museum_Tour.jpg" alt="cinema">
+                <img src="/assets/image/Museum_Tour.jpg" alt="museum">
                 <h1>Titulo</h1>
                 <h4>Descripcion</h4>
                 <div class="cardPrize">
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/assets/image/Music_Concert.jpg" alt="cinema">
+                <img src="/assets/image/Music_Concert.jpg" alt="concert">
                 <h1>Titulo</h1>
                 <h4>Descripcion</h4>
                 <div class="cardPrize">
@@ -116,9 +116,6 @@
                 </div>
             </div>
         </section>
-
-
-
     </main>
     <footer>   
             <div class="socialLinks">
@@ -133,27 +130,6 @@
                 <h2>MH.TN06</h2>
             </div>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
