added checkbox js-improve later

--- a/index.html
+++ b/index.html
@@ -46,17 +46,9 @@
                 <div class="container-fluid">
                     <div class="row filters">
                         <div class="col">
-                            <form action="" method="" class="checkFilter">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                <label for="category">Category</label><br>
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                <label for="category">Category</label><br>
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                <label for="category">Category</label><br>
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                <label for="category">Category</label><br>
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                <label for="category">Category</label><br>
+                            <form action="" method="" class="checkFilter" id="generatedCheckBox">
+
+                                
                             </form>
                         </div>
                         <div class="col">
