--- a/pages/eventsUpcoming.html
+++ b/pages/eventsUpcoming.html
@@ -46,24 +46,16 @@
                 <div class="container-fluid">
                     <div class="row filters">
                         <div class="col">
-                            <form action="" method="" class="checkFilter">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                <label for="category">Category</label><br>
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                <label for="category">Category</label><br>
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                <label for="category">Category</label><br>
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                <label for="category">Category</label><br>
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                <label for="category">Category</label><br>
+                            <form action="" method="" class="checkFilter" id="generatedCheckBox">
+
+                                
                             </form>
                         </div>
                         <div class="col">
                             <form action="" class="searchForm">
                                 <label for="searchBox"></label>
                                 <input type="text" name="searchBox" id="searchBox" placeholder="search" class="searchInput">
-                                <button class="searchButton hvr-fade"><img src="/assets/image/logos/searchLogo.png" alt="search button" class="searchLogo"></button>
+                                
                             </form> 
                         </div>
                     </div>
