--- a/pages/eventsPast.html
+++ b/pages/eventsPast.html
@@ -64,7 +64,7 @@
         <div class="mx-auto d-flex">
             <div class="cardstyle">
                 <div class="row row-cols-1 row-cols-md-2 gap-4 m-4 cardstyle2"
-                    id="cardcontainer">
+                    id="cardContainer">
                 </div>
             </div>
         </div>
