--- a/pages/details.html
+++ b/pages/details.html
@@ -42,18 +42,7 @@
             </div> 
         </header>
         <main>
-            <div class="container detailContainer">
-                <div class="row detailRow">
-                    <div class="col-4 detailLeftColumn">
-                        <img src="/assets/image/Cinema.jpg" alt="cinema">
-                    </div>
-                    <div class="col-4 detailRightColumn">
-                        <h1>TITLE</h1>
-                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quae nulla eius dolorum illum architecto. Iste laudantium sed tempore at, doloribus, minima nesciunt temporibus qui soluta suscipit repudiandae, accusantium possimus.
-                        </P>
-                    </div>
-                </div>
-          
+            <div class="container detailContainer" id="eventDetail">
             </div>
         </main>
         <footer class="mt-auto">
@@ -71,5 +60,7 @@
             </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        <script type="module" src="../assets/js/details.js"></script>
+        <script type="module" src="../assets/js/data.js"></script>
     </body>
 </html>
