tables style final

--- a/pages/stats.html
+++ b/pages/stats.html
@@ -45,7 +45,7 @@
         <section class="tableContainer">
             <!-- first part of the table -->
             <div class="container statTable">
-                <div class="table table-bordered table-fixed table-striped text-center ">
+                <div class="table table-bordered table-fixed table-striped text-center tableLarge ">
                     <table>
                         <thead>
                             <tr>
